# inoagents

./: .gitignore  Cargo.toml  Dockerfile  README.md
assets/: export.xlsx  nezh.xlsx  scratch.txt
assets/db/: db.sqlite  ino.sqlite
src/: main.rs
src/db/: interface.rs  mod.rs  model.rs  sqlite.rs
src/embedding/: interface.rs  mod.rs  model.rs  vectorize.rs
src/ino_api/: handlers.rs  mod.rs  server_api.rs
src/ino_checker/: ann.rs  checker.rs  interface.rs  mod.rs  model.rs  name_checker.rs  new_checker.rs  new_name_checker.rs  utils.rs
src/ino_loader/: loader.rs  model.rs
src/ner/: entities.rs  interface.rs  mod.rs  model.rs
src/rv/: get.rs
src/utils/: funcs.rs
