[package]
name = "service"
version = "1.2.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
calamine = "0.30.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
regex = "1.11.2"
reqwest = { version="0.12.23", features = ["json", "blocking"] }
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strsim = "0.11.1"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
